--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,8 +1,5 @@
 <template>
-    <div>
-        <header>header</header>
-        <router>ROUTER_RAW</router>
-        <test>TEST_RAW</test>
-        <footer>footer</footer>
-    </div>
+    <u-header>header</u-header>
+    <u-router>ROUTER_RAW</u-router>
+    <u-footer>footer</u-footer>
 </template>
