--- a/src/components/test/test.component.html
+++ b/src/components/test/test.component.html
@@ -1,7 +1,3 @@
 <template>
-    <div>
-        <p>123</p>
-        <p>hello world</p>
-        <p>123</p>
-    </div>
+  <p>LOADED_TEST_COMPONENT</p>
 </template>
