minor changes, formating etc.

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,5 @@
 <template>
-    <u-header>header</u-header>
-    <u-router>ROUTER_RAW</u-router>
-    <u-footer>footer</u-footer>
+    <u-header></u-header>
+    <u-router></u-router>
+    <u-footer></u-footer>
 </template>
