--- a/src/components/footer/footer.component.css
+++ b/src/components/footer/footer.component.css
@@ -1,8 +1,14 @@
 u-footer {
     display: block;
-    background: blue;
-    position: sticky;
-    bottom: 0;
     width: 100%;
-    height: 4rem;
+    height: 7rem;
+}
+
+u-footer .content {
+    background: turquoise;
+    position: fixed;
+    bottom: 0;
+    height: inherit;
+    width: inherit;
+    z-index: -1;
 }
