added multiple locale support

--- a/src/components/header/header.component.html
+++ b/src/components/header/header.component.html
@@ -1,5 +1,6 @@
 <template>
-  <h1>Header</h1>
-  <a href="/#/">home</a>
-  <a href="/#/test">test</a>
+  <h1><u-l path="header/name"></u-l></h1>
+  <a href="/#/"><u-l path="main/id"></u-l></a>
+  <a href="/#/test"><u-l path="test/id"></u-l></a>
+  <button id="loc_btn"></button>
 </template>
