--- a/src/views/test/test.view.html
+++ b/src/views/test/test.view.html
@@ -1,5 +1,5 @@
 <template>
-    <h2>Test page</h2>
+    <h2><u-l path="test/name"></u-l></h2>
     <u-test></u-test>
     <u-test></u-test>
     <u-test></u-test>
