--- a/src/views/main/main.view.css
+++ b/src/views/main/main.view.css
@@ -1,3 +1,86 @@
-u-router{
-    background-color: blueviolet;
+u-router {
+    position: relative;
+    background: rgb(42, 180, 244);
+    width: 100%;
+}
+
+/* html {
+    scroll-behavior: smooth;
+    scroll-snap-type: y proximity;
+}
+
+u-router>* {
+    scroll-snap-align: start;
+} */
+
+u-router #name {
+    top: 55vh;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+    position: absolute;
+    margin-right: auto;
+    font-size: 5rem;
+}
+
+u-router #main {
+    position: relative;
+    background: linear-gradient(0, rgb(42, 180, 244), rgb(35, 41, 158), rgb(54, 0, 54) 50%);
+    height: 150vh;
+    width: 100%;
+    overflow: hidden;
+    perspective: 50em;
+}
+
+u-router #main::before {
+    --col: pink;
+    --size: 100px;
+
+    position: absolute;
+    content: '';
+    display: block;
+    height: 100%;
+    width: 200%;
+    left: -50%;
+    right: -50%;
+    bottom: -200px;
+    background-size: var(--size) var(--size);
+    background-position: 0 0, calc(var(--size) / 2) calc(var(--size) / 2);
+    background-image: linear-gradient(0, transparent 56%, var(--col) 56%, var(--col) 60%, transparent 60%),
+        linear-gradient(90deg, transparent 56%, var(--col) 56%, var(--col) 60%, transparent 60%);
+    animation: scroll 0.5s linear none infinite;
+
+}
+
+u-router #main::after {
+    position: absolute;
+    content: '';
+    display: block;
+    background: radial-gradient(circle at 50% 40%, rgb(77, 7, 240), transparent),
+        linear-gradient(0, rgb(42, 180, 244), transparent 30%);
+    width: 100%;
+    height: 100%;
+    opacity: 0.8;
+    filter: blur(20px);
+}
+
+u-router #horizon{
+    position:absolute;
+    width: 100%;
+    height: 10rem;
+    top: 56vh;
+    background: purple;
+    backdrop-filter: blur(20px);
+    -webkit-mask-image: linear-gradient(0, transparent, black, transparent);
+    mask-image: linear-gradient(0, transparent, black, transparent);
+}
+
+@keyframes scroll {
+    0% {
+        transform: rotate3d(1, 0, 0, 60deg);
+    }
+
+    100% {
+        transform: rotate3d(1, 0, 0, 60deg) translateY(calc(-1 * var(--size)));
+    }
 }
