--- a/src/views/main/main.view.css
+++ b/src/views/main/main.view.css
@@ -1,26 +1,103 @@
 u-router {
     position: relative;
     background: rgb(42, 180, 244);
+}
+
+u-router #background {
+    position: absolute;
     width: 100%;
+    height: 67vh;
+    align-items: end;
+    background: rgb(54, 0, 54);
 }
 
-/* html {
-    scroll-behavior: smooth;
-    scroll-snap-type: y proximity;
+u-router #background>* {
+    position: absolute;
 }
 
-u-router>* {
-    scroll-snap-align: start;
-} */
+u-router #parallax {
+    bottom: 0;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+}
+
+u-router #moon {
+    top: 50%;
+    transition: transform 0 ease-in-out 0.5s;
+}
+
+u-router #moon>* {
+    position: absolute;
+}
 
 u-router #name {
-    top: 55vh;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 2;
-    position: absolute;
-    margin-right: auto;
+    font-family: "Trebuchet MS";
+    text-align: center;
+    width: 400px;
     font-size: 5rem;
+    margin: 0;
+    color: transparent;
+    background: linear-gradient(0, black 50%, rgba(46, 46, 46, 0.856) 50%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: chromatic 2s ease infinite;
+}
+
+@keyframes chromatic {
+    0% {
+        filter: drop-shadow(3px 2px 1px red) drop-shadow(0px -1px 1px blue) drop-shadow(-3px 0px 1px green);
+        background-size: 100% 4px;
+        transform: skewX(0deg);
+        opacity: 1;
+    }
+
+    25% {
+        filter: drop-shadow(5px 2px 1px blue) drop-shadow(0px -2px 1px green) drop-shadow(-3px 0px 1px green);
+        background-size: 100% 3px;
+        transform: skewX(0.5deg);
+        opacity: 0.9;
+    }
+
+    50% {
+        filter: drop-shadow(3px 2px 1px green) drop-shadow(0px -1px 1px red) drop-shadow(-4px 0px 1px green);
+        background-size: 100% 4px;
+        transform: skewX(0deg);
+        opacity: 1;
+    }
+
+    75% {
+        filter: drop-shadow(3px 2px 1px blue) drop-shadow(0px -1px 1px green) drop-shadow(-3px 0px 1px green);
+        background-size: 100% 3px;
+        transform: skewX(0.3deg);
+        opacity: 0.8;
+    }
+
+    100% {
+        filter: drop-shadow(3px 2px 1px red) drop-shadow(0px -1px 1px blue) drop-shadow(-3px 0px 1px green);
+        background-size: 100% 4px;
+        transform: skewX(0deg);
+        opacity: 1;
+    }
+}
+
+u-router #mountain {
+    pointer-events: none;
+}
+
+u-router .separator {
+    position: absolute;
+    width: 100%;
+    height: 10rem;
+    background: purple;
+    bottom: 0;
+    transform: translateY(50%);
+    backdrop-filter: blur(20px);
+    -webkit-mask-image: linear-gradient(0, transparent, black, transparent);
+    mask-image: linear-gradient(0, transparent, black, transparent);
+}
+u-router #main > .separator{
+    background: rgb(42, 180, 244);
 }
 
 u-router #main {
@@ -53,26 +130,15 @@ u-router #main::before {
 }
 
 u-router #main::after {
+    pointer-events: none;
     position: absolute;
     content: '';
     display: block;
-    background: radial-gradient(circle at 50% 40%, rgb(77, 7, 240), transparent),
+    background: radial-gradient(circle at 50% 40%, rgba(77, 7, 240, 0.2), transparent),
         linear-gradient(0, rgb(42, 180, 244), transparent 30%);
     width: 100%;
     height: 100%;
-    opacity: 0.8;
     filter: blur(20px);
-}
-
-u-router #horizon{
-    position:absolute;
-    width: 100%;
-    height: 10rem;
-    top: 56vh;
-    background: purple;
-    backdrop-filter: blur(20px);
-    -webkit-mask-image: linear-gradient(0, transparent, black, transparent);
-    mask-image: linear-gradient(0, transparent, black, transparent);
 }
 
 @keyframes scroll {
