--- a/src/views/main/main.view.html
+++ b/src/views/main/main.view.html
@@ -1,20 +1,10 @@
 <template>
-    <div id="main">
-        <div id="background" class="flex-center">
-            <div id="parallax" class="flex-center">
-                <div id="moon" class="flex-center">
-                    <img src="/src/public/moon.png" alt="">
-                    <h2 id="name">
-                        <u-l path="main/name"></u-l>
-                    </h2>
-                </div>
-            </div>
-            <img id="mountain" src="/src/public/mountain.png" alt="">
-            <div class="separator"></div>
-        </div>
+    <u-retro-wave></u-retro-wave>
+    <div id="content">
         <div class="separator"></div>
-    </div>
-    <div>
+        <h3>
+            <u-l path="main/hello_world"></u-l>
+        </h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur sunt expedita corrupti, fugiat porro
             cupiditate, tempora sint cum consequatur ut, laudantium suscipit? Reprehenderit, ex vitae possimus ad
             molestiae praesentium accusamus aliquam laudantium aut, excepturi sint libero, maxime corrupti. Inventore,
