--- a/src/components/footer/footer.component.css
+++ b/src/components/footer/footer.component.css
@@ -1,11 +1,13 @@
 u-footer {
     display: block;
+    color: white;
     width: 100%;
     height: 7rem;
 }
 
 u-footer .content {
-    background: turquoise;
+    background: rgb(15, 1, 15);
+    padding: 0 var(--side-padding);
     position:fixed;
     bottom: 0;
     width: inherit;
