--- a/src/components/main/retro-wave/retro-wave.component.html
+++ b/src/components/main/retro-wave/retro-wave.component.html
@@ -3,12 +3,10 @@
         <div id="parallax" class="flex-center">
             <div id="moon" class="flex-center">
                 <img src="/src/public/moon.png" alt="">
-                <h2 id="name">
-                    <u-l path="main/name"></u-l>
-                </h2>
+                <u-content></u-content>
             </div>
         </div>
         <img id="mountain" src="/src/public/mountain.png" alt="">
-        <div class="separator"></div>
+        <div id="horizon"></div>
     </div>
 </template>
