--- a/src/views/main/main.view.html
+++ b/src/views/main/main.view.html
@@ -1,5 +1,9 @@
 <template>
-    <u-retro-wave></u-retro-wave>
+    <u-retro-wave>
+        <h2 id="name">
+            <u-l path="main/name"></u-l>
+        </h2>
+    </u-retro-wave>
     <div id="content">
         <div class="separator"></div>
         <h3>
