--- a/src/views/test/test.view.html
+++ b/src/views/test/test.view.html
@@ -1,6 +1,14 @@
 <template>
-    <h2><u-l path="test/name"></u-l></h2>
-    <u-test></u-test>
-    <u-test></u-test>
-    <u-test></u-test>
+    <h2>
+        <u-l path="test/name"></u-l>
+    </h2>
+    <u-card>
+        <p>
+            <u-l path="test/test"></u-l>
+        </p>
+    </u-card>
+    <u-card>
+        <h2>123456</h2>
+        <p>55454545</p>
+    </u-card>
 </template>
