--- a/src/components/footer/footer.component.css
+++ b/src/components/footer/footer.component.css
@@ -1,12 +1,11 @@
 u-footer {
     display: block;
-    color: white;
     width: 100%;
-    height: 7rem;
+    height: 15em;
 }
 
 u-footer .content {
-    background: rgb(15, 1, 15);
+    background: var(--bg-2);
     padding: 0 var(--side-padding);
     position:fixed;
     bottom: 0;
