--- a/src/components/header/header.component.css
+++ b/src/components/header/header.component.css
@@ -1,13 +1,24 @@
 u-header {
-    background: rgb(15, 1, 15);
-    color: white;
+    background: var(--bg-2);
     position: sticky;
     display: flex;
     align-items: center;
     top: 0;
     transition: transform 0.1s linear;
     gap: 2rem;
-    padding: 0 var(--side-padding);
+    padding: 1rem var(--side-padding);
+    text-align: center;
+}
+
+u-header h1~* {
+    color: var(--txt-2);
+    margin: 0;
+    cursor: pointer;
+    background: none;
+    border: none;
+    font-size: 1em;
+    text-decoration: none;
+    text-transform: uppercase;
 }
 
 u-header.hidden {
@@ -15,5 +26,5 @@ u-header.hidden {
 }
 
 u-header h1 {
-    margin-right: auto;
+    margin: 0 auto 0 0;
 }
