--- a/src/app/app.css
+++ b/src/app/app.css
@@ -6,6 +6,7 @@
 
     --txt-1: rgb(255, 255, 255);
     --txt-2: rgb(129, 1, 129);
+    --txt-3: rgb(0, 34, 97);
     /*  ----------  */
     --side-padding: 5rem;
 }
