--- a/src/views/main/main.view.html
+++ b/src/views/main/main.view.html
@@ -1,11 +1,47 @@
 <template>
-    <u-retro-wave>
-        <h2 id="name">
-            <u-l path="main/name"></u-l>
-        </h2>
-    </u-retro-wave>
-    <div id="content">
-        <div class="separator"></div>
+    <section id="wave">
+        <u-retro-wave>
+            <h2 id="name">
+                <u-l path="main/name"></u-l>
+            </h2>
+        </u-retro-wave>
+    </section>
+    <section id="cards">
+        <h3>
+            <u-l path="main/hello_world"></u-l>
+        </h3>
+        <u-scroll-anim blur dir="left" opacity>
+            <u-card>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur rerum commodi molestias, excepturi
+                nemo magni dolorem est hic natus expedita cum ea aperiam. Mollitia aliquam harum voluptate a fuga
+                aliquid!</u-card>
+        </u-scroll-anim>
+        <u-scroll-anim blur dir="right" opacity>
+            <u-card>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi aliquam repellat laborum atque facere
+                ratione in a dolores id quaerat possimus soluta vitae corrupti, necessitatibus explicabo perferendis
+                dicta. Dolore, minima.</u-card>
+        </u-scroll-anim>
+        <u-scroll-anim blur dir="left" opacity>
+            <u-card>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore atque optio iste temporibus
+                exercitationem iure illo illum vero, ab architecto vel eum quas commodi laboriosam? Rem obcaecati
+                quaerat alias voluptate!</u-card>
+        </u-scroll-anim>
+        <u-scroll-anim blur dir="right" opacity>
+            <u-card>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit assumenda explicabo ut debitis
+                sapiente natus temporibus ratione quasi eum, qui totam delectus ab necessitatibus beatae error
+                doloremque corrupti quod? Amet!</u-card>
+        </u-scroll-anim>
+        <u-scroll-anim blur dir="left" opacity>
+            <u-card>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit qui repellat dolorem totam soluta.
+                Illum quia autem nesciunt modi! Placeat debitis maiores commodi aliquid quia ipsa pariatur aspernatur
+                illum sequi!</u-card>
+        </u-scroll-anim>
+        <u-scroll-anim blur dir="right" opacity>
+            <u-card>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, maxime, explicabo at odio non
+                voluptatum amet illum molestias, a facere perferendis totam quidem laborum quia? Quo quae excepturi
+                minima repellat.</u-card>
+        </u-scroll-anim>
+    </section>
+    <section id="text">
         <h3>
             <u-l path="main/hello_world"></u-l>
         </h3>
@@ -155,5 +191,5 @@
             distinctio libero assumenda! Quaerat sunt illo perferendis eum. Voluptates, ipsam. Mollitia cumque dolorem
             nesciunt, velit sapiente qui laudantium quod odit expedita consequatur eveniet molestiae repellat, nihil
             animi voluptatum iste iure corporis! Ab quaerat facilis corporis ipsam adipisci.</p>
-    </div>
+    </section>
 </template>
