--- a/src/components/header/header.component.html
+++ b/src/components/header/header.component.html
@@ -8,5 +8,6 @@
   <a href="/#/test">
     <u-l path="test/id"></u-l>
   </a>
+  <button id="theme_btn"></button>
   <button id="loc_btn"></button>
 </template>
