--- a/src/views/main/main.view.css
+++ b/src/views/main/main.view.css
@@ -9,19 +9,8 @@ u-router #wave~section {
     text-align: justify;
 }
 
-u-router #wave+section::before {
-    content: '';
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    transform: translateY(-50%);
-    height: 10rem;
-    background: linear-gradient(transparent, var(--bg-1), transparent);
-}
-
 u-router #cards {
-    overflow: hidden;
+    overflow-x: hidden;
     position: relative;
 }
 
