meaning of life

--- a/src/components/card/card.component.css
+++ b/src/components/card/card.component.css
@@ -17,7 +17,7 @@ u-card {
     border-color: var(--txt-3);
     text-shadow: var(--sh);
     box-shadow: var(--sh);
-    background: linear-gradient(0, black 90%, rgb(43, 43, 43) 90%);
+    background: linear-gradient(0, var(--bg-1) 90%, rgb(43, 43, 43) 90%);
     background-size: 100% 6px;
     animation: glitch 0.4s linear infinite;
 }
