--- a/src/components/footer/footer.component.html
+++ b/src/components/footer/footer.component.html
@@ -1,5 +1,9 @@
 <template>
   <div class="content">
-    <h2><u-l path="footer/name"></u-l></h2>
+    <h2>
+      <u-l path="footer/name"></u-l>
+    </h2>
+    <p>In case of your unsatisfaction please leave message to the Golgafrinchans, whos unexpected arrival on prehistoric
+      Earth caused input errors into the system and led to computing the wrong question </p>
   </div>
 </template>
