--- a/src/components/header/header.component.html
+++ b/src/components/header/header.component.html
@@ -1,12 +1,14 @@
 <template>
   <h1>
-    <u-l path="header/name"></u-l>
+    <a href="/#/">
+      <u-l path="name"></u-l>
+    </a>
   </h1>
-  <a href="/#/">
-    <u-l path="main/id"></u-l>
+  <a href="/#/about">
+    <u-l path="about/id"></u-l>
   </a>
-  <a href="/#/test">
-    <u-l path="test/id"></u-l>
+  <a href="/#/q&a">
+    <u-l path="q&a/id"></u-l>
   </a>
   <button id="theme_btn"></button>
   <button id="loc_btn"></button>
