--- a/src/components/footer/footer.component.html
+++ b/src/components/footer/footer.component.html
@@ -1,9 +1,6 @@
 <template>
   <div class="content">
-    <h2>
-      <u-l path="footer/name"></u-l>
-    </h2>
-    <p>In case of your unsatisfaction please leave message to the Golgafrinchans, whos unexpected arrival on prehistoric
-      Earth caused input errors into the system and led to computing the wrong question </p>
+    <h2><u-l path="footer/name"></u-l></h2>
+    <p><u-l path="footer/ps"></u-l></p>
   </div>
 </template>
