--- a/src/views/main/main.view.html
+++ b/src/views/main/main.view.html
@@ -7,48 +7,39 @@
         </u-retro-wave>
     </section>
     <section id="cards">
-        <h3>
-            <u-l path="main/hello_world"></u-l>
-        </h3>
         <u-scroll-anim blur dir="left" opacity>
             <u-card>
-                <h2>Ultimate Question of Life...</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, praesentium id, repudiandae
-                    distinctio quisquam quaerat culpa et saepe, maiores nobis aut non esse minus sunt voluptatibus a
-                    fugit natus voluptate!</p>
+                <h2><u-l path="main/cards/life/h"></u-l></h2>
+                <p><u-l path="main/cards/life/p"></u-l></p>
             </u-card>
         </u-scroll-anim>
         <u-scroll-anim blur dir="right" opacity>
             <u-card>
-                <h2>...the Universe...</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim ipsa, unde accusamus laboriosam
-                    incidunt aut eius quae similique. Repudiandae ex expedita inventore voluptatibus voluptatem atque
-                    dolor doloribus magni possimus illum!</p>
+                <h2><u-l path="main/cards/universe/h"></u-l></h2>
+                <p><u-l path="main/cards/universe/p"></u-l></p>
             </u-card>
         </u-scroll-anim>
         <u-scroll-anim blur dir="left" opacity>
             <u-card>
-                <h2>...and Everything</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio aspernatur expedita quia. Alias
-                    reprehenderit beatae laudantium accusantium, nisi eius odit modi omnis obcaecati sed pariatur
-                    mollitia voluptatibus earum cupiditate sequi.</p>
+                <h2><u-l path="main/cards/evrything/h"></u-l></h2>
+                <p><u-l path="main/cards/evrything/p"></u-l></p>
             </u-card>
         </u-scroll-anim>
     </section>
     <section id="anwser">
-        <h3>
-            <u-l path="main/hello_world"></u-l>
-        </h3>
-        <p><b>After calculating for 7.5-million years, Deep Thought determined the answer:</b></p>
-        <br>
-        <h2>42</h2>
+        <p><b><u-l path="main/anwser/p"></u-l></b></p>
+        <h2><u-l path="main/anwser/h"></u-l></h2>
     </section>
     <section id="question">
-        <p><b>The Question To The Answer Of Ultimate Question of Life, the Universe and Evrything</b></p>
+        <p><b><u-l path="main/question/p"></u-l></b></p>
         <br>
-        <h2>What do you get if you multiply six by nine?</h2>
-        <p><q>Six by nine. Forty two.</q></p>
-        <p><q>That's it. That's all there is.</q></p>
-        <p><q>I always thought something was fundamentally wrong with the universe.</q></p>
+        <h2><u-l path="main/question/h"></u-l></h2>
+        <p>
+            <q><u-l path="main/question/q1"></u-l></q>
+            <br>
+            <q><u-l path="main/question/q2"></u-l></q>
+            <br>
+            <q><u-l path="main/question/q3"></u-l></q>
+        </p>
     </section>
 </template>
