--- a/src/components/header/header.component.html
+++ b/src/components/header/header.component.html
@@ -7,8 +7,8 @@
   <a href="/#/about">
     <u-l path="about/id"></u-l>
   </a>
-  <a href="/#/q&a">
-    <u-l path="q&a/id"></u-l>
+  <a href="/#/faq">
+    <u-l path="faq/id"></u-l>
   </a>
   <button id="theme_btn"></button>
   <button id="loc_btn"></button>
