--- a/src/views/main/main.view.html
+++ b/src/views/main/main.view.html
@@ -10,19 +10,28 @@
         <u-scroll-anim blur dir="left" opacity>
             <u-card>
                 <h2><u-l path="main/cards/life/h"></u-l></h2>
-                <p><u-l path="main/cards/life/p"></u-l></p>
+                <ul>
+                    <li><u-l path="main/cards/life/li1"></u-l></li>
+                    <li><u-l path="main/cards/life/li2"></u-l></li>
+                </ul>
             </u-card>
         </u-scroll-anim>
         <u-scroll-anim blur dir="right" opacity>
             <u-card>
                 <h2><u-l path="main/cards/universe/h"></u-l></h2>
-                <p><u-l path="main/cards/universe/p"></u-l></p>
+                <ul>
+                    <li><u-l path="main/cards/universe/li1"></u-l></li>
+                    <li><u-l path="main/cards/universe/li2"></u-l></li>
+                </ul>            
             </u-card>
         </u-scroll-anim>
         <u-scroll-anim blur dir="left" opacity>
             <u-card>
                 <h2><u-l path="main/cards/evrything/h"></u-l></h2>
-                <p><u-l path="main/cards/evrything/p"></u-l></p>
+                <ul>
+                    <li><u-l path="main/cards/evrything/li1"></u-l></li>
+                    <li><u-l path="main/cards/evrything/li2"></u-l></li>
+                </ul>
             </u-card>
         </u-scroll-anim>
     </section>
