--- a/src/app/app.css
+++ b/src/app/app.css
@@ -37,6 +37,7 @@ body {
 }
 
 ::-webkit-scrollbar-track {
+    background-color: var(--bg-1);
     box-shadow: inset 0 0 5px var(--txt-2);
     border-radius: 10px;
 }
@@ -44,12 +45,12 @@ body {
 ::-webkit-scrollbar-thumb {
     border: solid;
     border-color: var(--bg-1);
-    background: linear-gradient(120deg, black, rgb(46, 0, 46));
+    background: linear-gradient(120deg, black, var(--bg-2));
     border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: linear-gradient(120deg, black, rgb(24, 0, 24));
+    background: linear-gradient(120deg, black, var(--bg-3));
 }
 
 /* ----------------------------- */
