--- a/src/components/main/retro-wave/retro-wave.component.html
+++ b/src/components/main/retro-wave/retro-wave.component.html
@@ -2,11 +2,11 @@
     <div id="background" class="flex-center">
         <div id="parallax" class="flex-center">
             <div id="moon" class="flex-center">
-                <img src="/src/public/moon.png" alt="">
+                <img src="./src/public/moon.png" alt="">
                 <u-content></u-content>
             </div>
         </div>
-        <img id="mountain" src="/src/public/mountain.png" alt="">
+        <img id="mountain" src="./src/public/mountain.png" alt="">
         <div id="horizon"></div>
     </div>
 </template>
