--- a/src/components/header/header.component.html
+++ b/src/components/header/header.component.html
@@ -1,13 +1,13 @@
 <template>
   <h1>
-    <a href="/#/">
+    <a href="./#/">
       <u-l path="name"></u-l>
     </a>
   </h1>
-  <a href="/#/about">
+  <a href="./#/about">
     <u-l path="about/id"></u-l>
   </a>
-  <a href="/#/faq">
+  <a href="./#/faq">
     <u-l path="faq/id"></u-l>
   </a>
   <button id="theme_btn"></button>
